# devs

./: .gitignore  AGENTS.md  README.md
apps/: AGENTS.md
apps/100-react-apps/: .gitignore  README.md
apps/100-react-apps/password-generator/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/100-react-apps/pomodoro-timer/: package-lock.json  package.json
apps/100-react-apps/qr-code-generator/: package-lock.json  package.json
apps/create-sheet-app/: .gitignore  pyproject.toml
apps/fast-notion-sample/: package-lock.json  package.json  tsconfig.json
apps/household-account-book/: package-lock.json  package.json
apps/keys-cli/: out.json  package-lock.json  package.json
apps/life-cli/: README.md  package-lock.json  package.json  tsconfig.json
apps/life-log-app/: index.html  package-lock.json  package.json  sample-data.json  vite.config.ts  wrangler.toml
apps/morning-journal/: .env  pyproject.toml
apps/morning-journal/src/journal/: main.py  notion_client.py  questions.py
apps/morning-journal/src/morning_journal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/react-basic/: package-lock.json  package.json
article/: AGENTS.md
article/cmdstanr/: README.md  article.md  cmdstan.R  cmdstan.stan  data.csv  outline.md
article/fast-notion/: README.md  article.md  body.md  outline.md
article/journal-cli/: README.md  outline.md
article/supabase-initial/: README.md
docs/password-generator/: index.html
docs/task-management-app/: index.html
stats/bayes/: 00_template.qmd
(+362 files in other folders)
