[project]
name = "morning-journal"
version = "0.1.0"
description = "Identity & Vision Driver CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "notion-client>=3.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
journal = "journal.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
